Fix submit button visibility

--- a/resources/assets/admin/styles/editor.scss
+++ b/resources/assets/admin/styles/editor.scss
@@ -466,7 +466,7 @@ div.mce-inline-toolbar-grp.mce-arrow-up,
   }
   .ff-user-guide {
     text-align: center;
-    margin-top: -138px;
+    margin-top: -42px;
     margin-left: -16px;
     img{
       width: 100%;
